@@ -1,8 +1,10 @@
 package ru.practicum.shareit.item.mapper;
 
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import ru.practicum.shareit.booking.mapper.BookingMapper;
 import ru.practicum.shareit.booking.model.Booking;
-import ru.practicum.shareit.item.dto.CommentDto;
+import ru.practicum.shareit.item.dto.CommentInfoDto;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.ItemDtoByOwner;
 import ru.practicum.shareit.item.model.Comment;
@@ -11,9 +13,8 @@ import ru.practicum.shareit.user.model.User;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
-
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ItemMapper {
     public static ItemDto doItemDto(Item item) {
         return new ItemDto(
@@ -36,7 +37,7 @@ public class ItemMapper {
 
     public static ItemDtoByOwner doItemDtoByOwner(Item item, List<Booking> lastBookings, List<Booking> nextBookings,
                                                   List<Comment> comments) {
-        List<CommentDto> commentDto = comments.stream().map(CommentMapper::toCommentDto).collect(Collectors.toList());
+        List<CommentInfoDto> commentInfoDto = comments.stream().map(CommentMapper::toCommentInfoDto).toList();
 
         Booking nextBooking = nextBookings.stream()
                 .min(Comparator.comparing(Booking::getStart)).orElse(null);
@@ -50,7 +51,7 @@ public class ItemMapper {
                 item.getAvailable(),
                 lastBooking != null ? BookingMapper.doBookingDto(lastBooking) : null,
                 nextBooking != null ? BookingMapper.doBookingDto(nextBooking) : null,
-                commentDto
+                commentInfoDto
         );
     }
 }
